fixed button alignment and order artists alphabetically

--- a/musicTherapy/music/static/music/style.css
+++ b/musicTherapy/music/static/music/style.css
@@ -51,7 +51,6 @@ h3 {
     text-decoration: none;
     font-size: 16px;
     border-radius: 25px;
-    left: 31%;
     margin-top: 15px;
     cursor: pointer;
 }
